# Releases

## git2effort 0.1 - (2020-05-03)

** New features and improvements: **

 * Supports Python 3.4 and newer versions.
 * Initial release